--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -8,6 +8,9 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.6.0",
@@ -22,6 +25,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@astrojs/vercel": "^8.2.10",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6"
   }
